<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/rice"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_title"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                	<TextView
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                    	android:text="@string/username_settings"
                    	android:textColor="@color/main_word" />

                 	<TextView
                    	android:id="@+id/username_settings"
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                    	android:text=""
                    	android:textColor="@color/main_word" />
					</LinearLayout>
                <Button
                    android:id="@+id/setUserNameButton_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setusername_settings" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/helptitile_settings"
                    android:textColor="@color/main_word"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/tutorialButton_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tutorialbutton_settings" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="15sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_title_version"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/AuthorName"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/verson"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/university"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/settings_mailButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mailbutton_settings" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="15sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_title_policy"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/notice"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/notice2"
                android:textColor="@color/black" />

            
            <Button
                android:id="@+id/myButton1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickFinish"
                android:text="@string/return_to_main" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>