<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/rice"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/additional_title"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="4sp"
            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional_feelings"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/radioGroup_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_acc0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_acc_bad" />

            <RadioButton
                android:id="@+id/radio_acc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_acc_normal" />

            <RadioButton
                android:id="@+id/radio_acc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_acc_good" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional_shake"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/radioGroup_shake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_shake0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_shake_bad" />

            <RadioButton
                android:id="@+id/radio_shake1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_shake_normal" />

            <RadioButton
                android:id="@+id/radio_shake2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_shake_good" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="4sp" >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional_capacity"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/additional_capacity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <Button
                android:id="@+id/additional_getCapacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_inputCapacity" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="4sp" >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional_manufacturer"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/addtional_btn_chooseManu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional_chooseManufacturer" />

        <LinearLayout
            android:id="@+id/additional_manufacturer_ll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="4sp" >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional_meno"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/additional_memo_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/additional_otherElevator"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="4sp" >
        </TextView>

        <Button
            android:id="@+id/additional_ReturnUploadButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/additional_return" />
    </LinearLayout>

</ScrollView>