<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/rice"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro1_sensing"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro2_sensing"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview2_sensing"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensing_sensing"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/xbox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="X Value"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_gravity="center_horizontal" >

        <TextView
            android:id="@+id/gboxtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:text="@string/bigredword_sensing"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center"
            android:text="Gravity"
            android:textColor="@color/red"
            android:textSize="40sp"
            android:textStyle="bold" />
        
    </LinearLayout>

    <Button
        android:id="@+id/myButton1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensing_cancel" />

    <LinearLayout
        android:id="@+id/sensing_finishElevatorLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>